--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <h1>Layout teste</h1>
     
-            <a class="btn1" href="#">Read more</a>
-            <a class="btn2" href="#">Contact Us</a>
+            <a class="btn1" href="#about">Read more</a>
+            <a class="btn2" href="#contato">Contact Us</a>
     </div>
 </section>
     <section class="about" id="about"> 
